--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@angular/cdk": "^7.3.3",
     "@angular/common": "7.2.8",
     "@angular/compiler": "7.2.8",
-    "@angular/core": "7.2.8",
-    "@angular/fire": "^5.1.1",
+    "@angular/core": "^7.2.8",
+    "@angular/fire": "^5.1.3",
     "@angular/forms": "7.2.8",
     "@angular/http": "7.2.8",
     "@angular/material": "^7.3.3",
@@ -37,9 +37,9 @@
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "7.3.5",
-    "@angular/compiler-cli": "7.2.8",
+    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular/cli": "^7.3.5",
+    "@angular/compiler-cli": "^7.2.8",
     "@angular/language-service": "7.2.8",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
@@ -55,6 +55,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "3.2.4"
+    "typescript": "^3.2.4"
   }
 }
